src/test/ui/parser/issues/issue-63116.stderr
error: unexpected closing delimiter: `]`
  --> $DIR/issue-63116.rs:3:16
   |
LL | impl W <s(f;Y(;]
   |                ^ unexpected closing delimiter

error: aborting due to previous error

